--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,17 @@
   }
 
   body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     font-family: 'Roboto', sans-serif;
     background: rgb(129,241,255);
-background: linear-gradient(180deg, rgba(129,241,255,1) 0%, rgba(160,222,134,1) 68%, rgba(32,62,86,1) 87%, rgba(26,53,73,1) 100%);
+    background: linear-gradient(180deg, rgba(129,241,255,1) 0%, rgba(160,222,134,1) 68%, rgba(32,62,86,1) 87%, rgba(26,53,73,1) 100%);
+}
+
+#site-body {
+  flex: 1 0 auto; 
+  overflow-y: auto;
 }
 
   .header {
@@ -67,10 +75,35 @@ h4 {
   box-shadow: 0 12px 16px rgba(0,0,0,0.3);
 }
 
+#forecast-container {
+  max-height: 80vh; 
+  overflow-y: auto;
+  margin-bottom: 20px;
+  margin-top: 20px
+}
+
 footer {
   font-family: "roboto", sans-serif;
     font-size: 1.69rem;
     background: #737373;
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    flex-shrink: 0;
+}
+
+@media (max-width: 768px) {
+  #forecast-container {
+    flex-direction: column;
+    align-items: center; 
+  }
+  .header {
+      font-size: 2rem;
+  }
+  #searchQuery {
+      width: 100%; 
+      box-shadow: none; 
+  }
+  .weather-card {
+      transform: none; 
+  }
 }
